# minem-backend

./: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  Makefile  crontab.example  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml
apps/common/: throttling.py
apps/contacts/: admin.py  models.py  serializers.py  urls.py  views.py
apps/contacts/migrations/: 0001_initial.py  0002_alter_contact_options.py
apps/delivery/: models.py  serializers.py  service.py  urls.py  views.py
apps/delivery/provider/: __init__.py  base.py  schemas.py  yandex.py
apps/main/: admin.py  models.py  serializers.py  urls.py  views.py
apps/main/admin/: __init__.py  color.py  filters.py  forms.py  inlines.py  media.py  media_forms.py  mixins.py  option.py  product.py  services.py  size.py  variant.py
apps/main/migrations/: 0001_initial.py  0002_alter_category_options_alter_color_options_and_more.py  0002_make_sku_optional.py  0003_productvariant_dimension_height_and_more.py
apps/orders/: admin.py  models.py  serializers.py  service.py  services.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_alter_order_id.py  0002_alter_order_id_alter_order_payment_url_and_more.py  0003_alter_order_id.py  0003_alter_order_options_alter_ordercustomer_options_and_more.py  (+4 more)
apps/payment/: admin.py  models.py  serializers.py  service.py  urls.py  views.py
apps/storage/: __init__.py  service.py
config/: admin.py  settings.py  urls.py
templates/emails/: order_canceled.html  order_confirmation.html
(+17 files in other folders)
