[tool.poetry]
name = "minem_kiem"
version = "0.1.0"
authors = ["nlsnnn <egor.larrr@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
django = "5.2.10"
pillow = "^12.1.0"
djangorestframework = "^3.16.1"
django-cors-headers = "^4.9.0"
psycopg2 = "^2.9.11"
django-filter = "^25.2"
python-decouple = "^3.8"
yookassa = "^3.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.11,<0.15.0)"
]
